--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
         "build": "webpack"
     },
     "dependencies": {
+        "axios": "^0.18.0",
+        "bcrypt-nodejs": "latest",
         "body-parser": "^1.5.2",
+        "bootstrap": "^4.0.0-beta.2",
+        "connect-flash": "~0.1.1",
         "express": "^4.16.4",
+        "express-session": "^1.15.6",
         "method-override": "~3.0.0",
         "mongoose": "~5.3.12",
         "morgan": "^1.9.0",
-        "bootstrap": "^4.0.0-beta.2",
-        "axios": "^0.18.0",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
+        "cookie-parser": "~1.4.3",
         "vue": "^2.5.11",
         "vue-axios": "^2.0.2"
     },
