--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - mongo
   mongo:
     container_name: mongo
-    image: mongo
+    image: mongo:latest
+    command: mongod --port 27018
     ports:
-      - "27017:27017"
+      - "27018:27018"
   
